Apply rule "Preferjava.util.Set.of(Object)"