@@ -5,6 +5,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -78,7 +79,7 @@ public class MigLayoutFactoryBean implements FactoryBean<MigLayout> {
 				//
 			} else if (object instanceof Number || object instanceof Boolean || object instanceof String) {
 				//
-				setArguments(Collections.singleton(object));
+				setArguments(Set.of(object));
 				//
 			} else {
 				//
